--- a/Camera Interface Demo/Camera Interface Demo/Base.lproj/Main.storyboard
+++ b/Camera Interface Demo/Camera Interface Demo/Base.lproj/Main.storyboard
@@ -1,48 +1,137 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Camera View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                <viewController id="BYZ-38-t0r" customClass="CameraViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="REz-UH-NdQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="GPG-dz-EWu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="PreviewView">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5Lg-1g-qFZ">
-                                <rect key="frame" x="121" y="518" width="79" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="View Image"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NDm-fS-dsz" customClass="PreviewView">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera is unavailable" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jfw-A2-wRH">
+                                        <rect key="frame" x="183" y="286" width="234" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <color key="textColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wz6-Qc-VjX">
+                                        <rect key="frame" x="221" y="280" width="159" height="41"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <state key="normal" title="Tap to Resume">
+                                            <color key="titleColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="resumeInterruptedSession:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ujj-ab-yd5"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6m-c6-9Y7">
+                                        <rect key="frame" x="260" y="550" width="80" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="FFM-ga-oP8"/>
+                                            <constraint firstAttribute="height" constant="30" id="Neo-DC-Yst"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Still">
+                                            <color key="titleColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="snapStillImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mi7-6Q-6aY"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3QS-aT-2QY">
+                                        <rect key="frame" x="160" y="550" width="80" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Record">
+                                            <color key="titleColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="toggleMovieRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hG9-f8-6TF"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Buo-tK-lsE">
+                                        <rect key="frame" x="360" y="550" width="80" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Camera">
+                                            <color key="titleColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="changeCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qCR-hH-d8z"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Wz6-Qc-VjX" firstAttribute="centerX" secondItem="NDm-fS-dsz" secondAttribute="centerX" id="1B9-cZ-mkX"/>
+                                    <constraint firstItem="Buo-tK-lsE" firstAttribute="height" secondItem="D6m-c6-9Y7" secondAttribute="height" id="2Fx-vm-LHi"/>
+                                    <constraint firstItem="Jfw-A2-wRH" firstAttribute="centerY" secondItem="NDm-fS-dsz" secondAttribute="centerY" id="4z9-6h-nA3"/>
+                                    <constraint firstItem="Wz6-Qc-VjX" firstAttribute="centerY" secondItem="NDm-fS-dsz" secondAttribute="centerY" id="Dzt-I2-d08"/>
+                                    <constraint firstAttribute="bottom" secondItem="D6m-c6-9Y7" secondAttribute="bottom" constant="20" id="JCx-zr-06B"/>
+                                    <constraint firstItem="Buo-tK-lsE" firstAttribute="leading" secondItem="D6m-c6-9Y7" secondAttribute="trailing" constant="20" id="Nym-pR-yUh"/>
+                                    <constraint firstItem="D6m-c6-9Y7" firstAttribute="height" secondItem="3QS-aT-2QY" secondAttribute="height" id="Q5A-cr-3Iq"/>
+                                    <constraint firstItem="D6m-c6-9Y7" firstAttribute="leading" secondItem="3QS-aT-2QY" secondAttribute="trailing" constant="20" id="R5g-jx-ZPz"/>
+                                    <constraint firstItem="D6m-c6-9Y7" firstAttribute="centerX" secondItem="NDm-fS-dsz" secondAttribute="centerX" id="UfJ-Vj-gBZ"/>
+                                    <constraint firstAttribute="height" constant="600" id="aH3-rz-i6B"/>
+                                    <constraint firstItem="D6m-c6-9Y7" firstAttribute="width" secondItem="3QS-aT-2QY" secondAttribute="width" id="ceS-lO-84m"/>
+                                    <constraint firstItem="Jfw-A2-wRH" firstAttribute="centerX" secondItem="NDm-fS-dsz" secondAttribute="centerX" id="dRS-Oj-nuT"/>
+                                    <constraint firstItem="Buo-tK-lsE" firstAttribute="width" secondItem="D6m-c6-9Y7" secondAttribute="width" id="iPB-eK-OeD"/>
+                                    <constraint firstItem="Buo-tK-lsE" firstAttribute="centerY" secondItem="D6m-c6-9Y7" secondAttribute="centerY" id="m5t-e3-gqo"/>
+                                    <constraint firstItem="D6m-c6-9Y7" firstAttribute="centerY" secondItem="3QS-aT-2QY" secondAttribute="centerY" id="sPD-HP-jHX"/>
+                                    <constraint firstAttribute="width" constant="600" id="sYT-kT-YOV"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="aH3-rz-i6B"/>
+                                        <exclude reference="sYT-kT-YOV"/>
+                                    </mask>
+                                </variation>
                                 <connections>
-                                    <action selector="selectPhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QOF-kP-0Ws"/>
+                                    <outletCollection property="gestureRecognizers" destination="1cF-6H-pGI" appends="YES" id="s9d-0z-yUp"/>
+                                    <outletCollection property="gestureRecognizers" destination="ehg-Ko-gmy" appends="YES" id="KUZ-lU-Efk"/>
                                 </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7pc-vj-SfJ">
-                                <rect key="frame" x="122" y="480" width="77" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Take Photo"/>
-                                <connections>
-                                    <action selector="takePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ncl-VQ-Ffq"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="6Hx-mK-VjX">
-                                <rect key="frame" x="0.0" y="20" width="320" height="457"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NDm-fS-dsz" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="9Tt-0P-tO5"/>
+                            <constraint firstItem="NDm-fS-dsz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dku-Jb-eiV"/>
+                            <constraint firstItem="NDm-fS-dsz" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="Gwu-7a-myf"/>
+                            <constraint firstItem="NDm-fS-dsz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="baE-tg-BRi"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="6Hx-mK-VjX" id="7IR-Ov-AIa"/>
+                        <outlet property="cameraButton" destination="Buo-tK-lsE" id="kSa-mt-Dr0"/>
+                        <outlet property="cameraUnavailableLabel" destination="Jfw-A2-wRH" id="H2y-Rh-a7E"/>
+                        <outlet property="previewView" destination="NDm-fS-dsz" id="Na7-gF-azU"/>
+                        <outlet property="recordButton" destination="3QS-aT-2QY" id="e63-2y-7f9"/>
+                        <outlet property="resumeButton" destination="Wz6-Qc-VjX" id="bVR-zc-CZB"/>
+                        <outlet property="stillButton" destination="D6m-c6-9Y7" id="qte-FT-ehf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="1cF-6H-pGI">
+                    <connections>
+                        <action selector="focusAndExposeTap:" destination="BYZ-38-t0r" id="YmE-HX-ibe"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <pinchGestureRecognizer id="ehg-Ko-gmy">
+                    <connections>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="b4v-mm-3h9"/>
+                    </connections>
+                </pinchGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-16" y="297"/>
+            <point key="canvasLocation" x="-30" y="313"/>
         </scene>
     </scenes>
 </document>
